# cloc

./: CMakeLists.txt  LICENSE  README.md  TODO.md  TODO.org  awk_generate_range.awk  build.sh  digits.h  helpers.c  helpers.h  macros.h  main.c  offset.c  offset.h  stopwatch.c  stopwatch.h
fonts/: 5lineoblique.h  acrobatic.h  avatar.h  chunky.h  cricket.h  cursive.h  doom.h  download_fonts.sh  drpepper.h  eftifont.h  eftirobot.h  eftitalic.h  fourtops.h  generate_font.awk  generator.sh  gothic.h  graffiti.h  italic.h  kban.h  larry3d.h  lcd.h  lean.h  madrid.h  mini.h  mono12.h  mono9.h  other_awk_scripts  rectangles.h  serifcap.h  short.h  slant.h  slscript.h  smmono12.h  smscript.h  smshadow.h  smslant.h  standard.h  straight.h  thin.h  tinker-toy.h  (+4 more)
